index_trangchu_fix

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1037,7 +1037,7 @@
                                         <img th:src="@{images/index/banners/banner-9.jpg}" alt="Banner">
                                     </a>
                                     <div class="banner-content align-items-center center">
-                                        <img class="banner-title-img mb-1" th:src="@{images/index/banners/banner-9-title.jpg}" alt="Banner-9">
+                                        <img class="banner-title-img mb-1" src="images/index/banners/banner-9-title.jpg" alt="Banner-9">
                                         <h4 class="banner-price mb-2" style="font-weight: 600;">$29.99</h4>
                                         <a href="#" class="banner-link size-lg">Pre-Order Now<i class="icon-long-arrow-right"></i></a>
                                     </div>
