--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -10,7 +10,7 @@
     <meta name="description" content="LPD GameStore">
     <meta name="author" content="p-themes">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" th:href="@{vendor/line-awesome/line-awesome/line-awesome/css/line-awesome.min.css}">
+    <link rel="stylesheet" th:href="@{vendor/line-awesome/css/line-awesome.min.css}">
     <!-- Plugins CSS File -->
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{css/plugins/owl-carousel/owl.carousel.css}">
@@ -26,12 +26,12 @@
     <div layout:fragment="content"></div>
     <div layout:replace="layout/footer :: footer"></div>
     <!-- Plugins JS File -->
-    <script th:src="@{js/jquery.min.js}" type="application/javascript"></script>
-    <script th:src="@{js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{js/jquery.hoverIntent.min.js}"></script>
+    <script th:src="@{js/jquery.min.js}" type="text/javascript"></script>
+    <script th:src="@{js/bootstrap.bundle.min.js}" type="text/javascript"></script>
+    <script th:src="@{js/jquery.hoverIntent.min.js}" type="text/javascript"></script>
     <script th:src="@{js/jquery.waypoints.min.js}"></script>
     <script th:src="@{js/superfish.min.js}"></script>
-    <script th:src="@{js/owl.carousel.min.js}"></script>
+    <script th:src="@{js/owl.carousel.min.js}" type="text/javascript"></script>
     <script th:src="@{js/bootstrap-input-spinner.js}"></script>
     <script th:src="@{js/jquery.magnific-popup.min.js}"></script>
     <!-- Main JS File -->
