index_trangchu_fix2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -117,7 +117,7 @@
                             <div class="banner-content">
                                 <h4 class="banner-subtitle">Pre-order now</h4>
                                 <img src="images/index/banners/banner-1-title.png" alt="Banner 1 Title" width="217" height="54" class="mb-1">
-                                <a href="#" class="banner-link size-lg">Pre-Order Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link size-lg">Pre-Order Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-lg-6 -->
@@ -131,7 +131,7 @@
                                 <h4 class="banner-subtitle">Weekend Offer</h4>
                                 <img class="banner-title-img" src="images/index/banners/banner-2-title.png" alt="Banner-2">
                                 <h4 class="banner-price">Save<span class="price">$19,99</span></h4>
-                                <a href="#" class="banner-link">Buy Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
 
@@ -142,7 +142,7 @@
                             <div class="banner-content text-right">
                                 <img class="banner-title-img" src="images/index/banners/banner-3-title.png" alt="Banner-3">
                                 <h5 class="text-white">35% OFF</h5>
-                                <a href="#" class="banner-link">Buy Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-lg-3 -->
@@ -156,7 +156,7 @@
                                 <h4 class="banner-subtitle">Weekend Sale</h4>
                                 <img class="banner-title-img" src="images/index/banners/banner-4-title.png" alt="Banner-4">
                                 <h4 class="banner-price"><span class="off">25% off</span></h4>
-                                <a href="#" class="banner-link">Buy Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-lg-3 -->
@@ -169,7 +169,7 @@
                             <div class="banner-content">
                                 <h4 class="banner-subtitle">Amazing Value</h4>
                                 <img class="banner-title-img mb-1" src="images/index/banners/banner-5-title.png" alt="Banner-5">
-                                <a href="#" class="banner-link">Pre-Order Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Pre-Order Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-lg-9 -->
@@ -464,7 +464,7 @@
                                 <div class="product">
                                     <figure class="product-media">
                                         <a href="product.html">
-                                            <img th:src="@{images/index/products/product-6.jpg}" alt="Product image" class="product-image">
+                                            <img src="images/index/products/product-6.jpg" alt="Product image" class="product-image">
                                         </a>
 
                                         <div class="product-action-vertical">
@@ -798,7 +798,7 @@
                                 <h4 class="banner-subtitle">Weekend Offer</h4>
                                 <img class="banner-title-img" src="images/index/banners/banner-6-title.png" alt="Banner-6">
                                 <h4 class="banner-price"><span class="off" style="font-weight: 600;">Save <span class="price">$19.99</span></span></h4>
-                                <a href="#" class="banner-link">Buy Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="las la-long-arrow-alt-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-md-4 -->
@@ -812,7 +812,7 @@
                                 <h4 class="banner-subtitle" style="letter-spacing: 0.1em;">Amazing Deal on an</h4>
                                 <h2 class="banner-title mb-0" style="font-size: 3rem;">XBOX ONE</h2>
                                 <h4 class="banner-price"><span class="off" style="font-weight: 600;">Save $50</span></h4>
-                                <a href="#" class="banner-link">Buy Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-md-4 -->
@@ -825,7 +825,7 @@
                             <div class="banner-content">
                                 <h4 class="banner-price text-white mb-1">Save $29.00</h4>
                                 <img class="banner-title-img mb-2" src="images/index/banners/banner-8-title.png" alt="Banner-8">
-                                <a href="#" class="banner-link">Buy Now<i class="icon-long-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-md-4 -->
@@ -843,7 +843,7 @@
                     </div><!-- End .heading-left -->
 
                     <div class="heading-right">
-                        <a href="category.html" class="title-link">View more products <i class="icon-long-arrow-right"></i></a>
+                        <a href="category.html" class="title-link">View more products <i class="bi bi-arrow-right"></i></a>
                     </div><!-- End .heading-right -->
                 </div><!-- End .heading -->
 
@@ -1034,10 +1034,10 @@
                                     }'>
                                 <div class="banner banner-overlay product-banner">
                                     <a href="#">
-                                        <img th:src="@{images/index/banners/banner-9.jpg}" alt="Banner">
+                                        <img src="images/index/banners/banner-9.jpg" alt="Banner">
                                     </a>
                                     <div class="banner-content align-items-center center">
-                                        <img class="banner-title-img mb-1" src="images/index/banners/banner-9-title.jpg" alt="Banner-9">
+                                        <img class="banner-title-img mb-1" src="images/index/banners/banner-9-title.png" alt="Banner-9">
                                         <h4 class="banner-price mb-2" style="font-weight: 600;">$29.99</h4>
                                         <a href="#" class="banner-link size-lg">Pre-Order Now<i class="icon-long-arrow-right"></i></a>
                                     </div>
