--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -8,44 +8,8 @@
                 <div class="header-top">
                     <div class="container">
                         <div class="header-left">
-                            <a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a>
+                            <a href="tel:#"><i class="las la-phone"></i>Call: +0123 456 789</a>
                         </div><!-- End .header-left -->
-
-                        <div class="header-right">
-
-                            <ul class="top-menu">
-                                <li>
-                                    <a href="#">Links</a>
-                                    <ul>
-                                        <li>
-                                            <div class="header-dropdown">
-                                                <a href="#">USD</a>
-                                                <div class="header-menu">
-                                                    <ul>
-                                                        <li><a href="#">Eur</a></li>
-                                                        <li><a href="#">Usd</a></li>
-                                                    </ul>
-                                                </div><!-- End .header-menu -->
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="header-dropdown">
-                                                <a href="#">English</a>
-                                                <div class="header-menu">
-                                                    <ul>
-                                                        <li><a href="#">English</a></li>
-                                                        <li><a href="#">French</a></li>
-                                                        <li><a href="#">Spanish</a></li>
-                                                    </ul>
-                                                </div><!-- End .header-menu -->
-                                            </div>
-                                        </li>
-                                        <li><a href="#signin-modal" data-toggle="modal">Sign in / Sign up</a></li>
-                                    </ul>
-                                </li>
-                            </ul><!-- End .top-menu -->
-                        </div><!-- End .header-right -->
-
                     </div><!-- End .container -->
                 </div><!-- End .header-top -->
 
@@ -68,7 +32,7 @@
                                 <form action="#" method="get">
                                     <div class="header-search-wrapper search-wrapper-wide">
                                         <label for="q" class="sr-only">Search</label>
-                                        <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
+                                        <button class="btn btn-primary" type="submit"><i class="las la-search"></i></button>
                                         <input type="search" class="form-control" name="q" id="q" placeholder="Search product ..." required>
                                     </div><!-- End .header-search-wrapper -->
                                 </form>
@@ -80,26 +44,26 @@
                                 <div class="account">
                                     <a href="dashboard.html" title="My account">
                                         <div class="icon">
-                                            <i class="icon-user"></i>
+                                            <i class="las la-user"></i>
                                         </div>
-                                        <p>Account</p>
+                                        <p>Register/Login</p>
                                     </a>
                                 </div><!-- End .compare-dropdown -->
 
                                 <div class="wishlist">
                                     <a href="wishlist.html" title="Wishlist">
                                         <div class="icon">
-                                            <i class="icon-heart-o"></i>
+                                            <i class="las la-envelope"></i>
                                             <span class="wishlist-count badge">3</span>
                                         </div>
-                                        <p>Wishlist</p>
+                                        <p>Support</p>
                                     </a>
                                 </div><!-- End .compare-dropdown -->
 
                                 <div class="dropdown cart-dropdown">
                                     <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
                                         <div class="icon">
-                                            <i class="icon-shopping-cart"></i>
+                                            <i class="las la-shopping-cart"></i>
                                             <span class="cart-count">2</span>
                                         </div>
                                         <p>Cart</p>
