--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -10,7 +10,6 @@
     <meta name="description" content="LPD GameStore">
     <meta name="author" content="p-themes">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" th:href="@{vendor/line-awesome/css/line-awesome.min.css}">
     <!-- Plugins CSS File -->
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{css/plugins/owl-carousel/owl.carousel.css}">
@@ -19,6 +18,8 @@
     <link rel="stylesheet" th:href="@{css/style.css}">
     <link rel="stylesheet" th:href="@{css/skin-index.css}">
     <link rel="stylesheet" th:href="@{css/index.css}">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+
 
 </head>
 <body>
