index_trangchu_fix3

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,7 @@
     <title>Title</title>
 </head>
 <body>
-<div layout:fragment="content">
-    <div class="wrap-container">
-        <main class="main">
+        <main class="main" layout:fragment="content">
             <div class="mb-2"></div><!-- End .mb-2 -->
             <div class="container">
                 <div class="row">
@@ -182,7 +180,7 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="icon-box icon-box-side">
                                     <span class="icon-box-icon">
-                                        <i class="icon-rocket"></i>
+                                       <i class="las la-shipping-fast"></i>
                                     </span>
                                 <div class="icon-box-content">
                                     <h3 class="icon-box-title">Free Shipping</h3><!-- End .icon-box-title -->
@@ -194,7 +192,7 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="icon-box icon-box-side">
                                     <span class="icon-box-icon">
-                                        <i class="icon-rotate-left"></i>
+                                        <i class="las la-undo-alt"></i>
                                     </span>
 
                                 <div class="icon-box-content">
@@ -207,7 +205,7 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="icon-box icon-box-side">
                                     <span class="icon-box-icon">
-                                        <i class="icon-info-circle"></i>
+                                       <i class="las la-info-circle"></i>
                                     </span>
 
                                 <div class="icon-box-content">
@@ -220,7 +218,7 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="icon-box icon-box-side">
                                     <span class="icon-box-icon">
-                                        <i class="icon-life-ring"></i>
+                                        <i class="las la-life-ring"></i>
                                     </span>
 
                                 <div class="icon-box-content">
@@ -1370,7 +1368,5 @@
                 </div><!-- End .container -->
             </div><!-- End .blog-posts -->
         </main><!-- End .main -->
-</div>
-
 </body>
 </html>
