--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -2,8 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body>
-    <section layout:fragment="header">
-        <div class="wrap-container">
+        <div class="wrap-container" layout:fragment="header">
             <header class="header header-intro-clearance header-3">
                 <div class="header-top">
                     <div class="container">
@@ -133,193 +132,12 @@
                     <div class="container">
                         <div class="header-center">
                             <nav class="main-nav">
-                                <ul class="menu sf-arrows">
+                                <ul class="menu">
                                     <li class="megamenu-container active">
-                                        <a href="index.html" class="sf-with-ul">Home</a>
-
-                                        <div class="megamenu demo">
-                                            <div class="menu-col">
-                                                <div class="menu-title">Choose your demo</div><!-- End .menu-title -->
-
-                                                <div class="demo-list">
-                                                    <div class="demo-item">
-                                                        <a href="index-1.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/1.jpg);"></span>
-                                                            <span class="demo-title">01 - furniture store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-2.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/2.jpg);"></span>
-                                                            <span class="demo-title">02 - furniture store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-3.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/3.jpg);"></span>
-                                                            <span class="demo-title">03 - electronic store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-4.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/4.jpg);"></span>
-                                                            <span class="demo-title">04 - electronic store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-5.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/5.jpg);"></span>
-                                                            <span class="demo-title">05 - fashion store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-6.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/6.jpg);"></span>
-                                                            <span class="demo-title">06 - fashion store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-7.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/7.jpg);"></span>
-                                                            <span class="demo-title">07 - fashion store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-8.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/8.jpg);"></span>
-                                                            <span class="demo-title">08 - fashion store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-9.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/9.jpg);"></span>
-                                                            <span class="demo-title">09 - fashion store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item">
-                                                        <a href="index-10.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/10.jpg);"></span>
-                                                            <span class="demo-title">10 - shoes store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-11.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/11.jpg);"></span>
-                                                            <span class="demo-title">11 - furniture simple store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-12.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/12.jpg);"></span>
-                                                            <span class="demo-title">12 - fashion simple store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-13.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/13.jpg);"></span>
-                                                            <span class="demo-title">13 - market</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-14.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/14.jpg);"></span>
-                                                            <span class="demo-title">14 - market fullwidth</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-15.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/15.jpg);"></span>
-                                                            <span class="demo-title">15 - lookbook 1</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-16.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/16.jpg);"></span>
-                                                            <span class="demo-title">16 - lookbook 2</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-17.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/17.jpg);"></span>
-                                                            <span class="demo-title">17 - fashion store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-18.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/18.jpg);"></span>
-                                                            <span class="demo-title">18 - fashion store (with sidebar)</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-19.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/19.jpg);"></span>
-                                                            <span class="demo-title">19 - games store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-20.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/20.jpg);"></span>
-                                                            <span class="demo-title">20 - book store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-21.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/21.jpg);"></span>
-                                                            <span class="demo-title">21 - sport store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-22.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/22.jpg);"></span>
-                                                            <span class="demo-title">22 - tools store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-23.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/23.jpg);"></span>
-                                                            <span class="demo-title">23 - fashion left navigation store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                    <div class="demo-item hidden">
-                                                        <a href="index-24.html">
-                                                            <span class="demo-bg" style="background-image: url(assets/images/menu/demos/24.jpg);"></span>
-                                                            <span class="demo-title">24 - extreme sport store</span>
-                                                        </a>
-                                                    </div><!-- End .demo-item -->
-
-                                                </div><!-- End .demo-list -->
-
-                                                <div class="megamenu-action text-center">
-                                                    <a href="#" class="btn btn-outline-primary-2 view-all-demos"><span>View All Demos</span><i class="icon-long-arrow-right"></i></a>
-                                                </div><!-- End .text-center -->
-                                            </div><!-- End .menu-col -->
-                                        </div><!-- End .megamenu -->
+                                        <a href="index.html" > <i class="las la-home"></i> Home</a>
                                     </li>
                                     <li>
-                                        <a href="category.html" class="sf-with-ul">Shop</a>
+                                        <a href="category.html">Shop</a>
 
                                         <div class="megamenu megamenu-md">
                                             <div class="row no-gutters">
@@ -377,7 +195,7 @@
                                         </div><!-- End .megamenu megamenu-md -->
                                     </li>
                                     <li>
-                                        <a href="product.html" class="sf-with-ul">Product</a>
+                                        <a href="product.html" >Product</a>
 
                                         <div class="megamenu megamenu-sm">
                                             <div class="row no-gutters">
@@ -412,7 +230,7 @@
                                         </div><!-- End .megamenu megamenu-sm -->
                                     </li>
                                     <li>
-                                        <a href="#" class="sf-with-ul">Pages</a>
+                                        <a href="#" >Brand</a>
 
                                         <ul>
                                             <li>
@@ -438,7 +256,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="blog.html" class="sf-with-ul">Blog</a>
+                                        <a href="blog.html" >News</a>
 
                                         <ul>
                                             <li><a href="blog.html">Classic</a></li>
@@ -479,24 +297,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="elements-list.html" class="sf-with-ul">Elements</a>
-
-                                        <ul>
-                                            <li><a href="elements-products.html">Products</a></li>
-                                            <li><a href="elements-typography.html">Typography</a></li>
-                                            <li><a href="elements-titles.html">Titles</a></li>
-                                            <li><a href="elements-banners.html">Banners</a></li>
-                                            <li><a href="elements-product-category.html">Product Category</a></li>
-                                            <li><a href="elements-video-banners.html">Video Banners</a></li>
-                                            <li><a href="elements-buttons.html">Buttons</a></li>
-                                            <li><a href="elements-accordions.html">Accordions</a></li>
-                                            <li><a href="elements-tabs.html">Tabs</a></li>
-                                            <li><a href="elements-testimonials.html">Testimonials</a></li>
-                                            <li><a href="elements-blog-posts.html">Blog Posts</a></li>
-                                            <li><a href="elements-portfolio.html">Portfolio</a></li>
-                                            <li><a href="elements-cta.html">Call to Action</a></li>
-                                            <li><a href="elements-icon-boxes.html">Icon Boxes</a></li>
-                                        </ul>
+                                        <a href="elements-list.html" >About Us</a>
                                     </li>
                                 </ul><!-- End .menu -->
                             </nav><!-- End .main-nav -->
@@ -509,8 +310,4 @@
                 </div><!-- End .header-bottom -->
             </header><!-- End .header -->
         </div>
-
-
-    </section>
-
 </body>
