--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -23,9 +23,14 @@
 
 </head>
 <body>
-    <div layout:replace="layout/header :: header"></div>
-    <div layout:fragment="content"></div>
-    <div layout:replace="layout/footer :: footer"></div>
+    <div class="page-wrapper">
+            <div layout:replace="layout/header :: header"></div>
+        <div class="wrap-container" >
+            <div layout:fragment="content"></div>
+            <div layout:replace="layout/footer :: footer"></div>
+        </div>
+    </div>
+            <div layout:replace="layout/AddOn :: addon"></div>
     <!-- Plugins JS File -->
     <script th:src="@{js/jquery.min.js}" type="text/javascript"></script>
     <script th:src="@{js/bootstrap.bundle.min.js}" type="text/javascript"></script>
@@ -35,6 +40,7 @@
     <script th:src="@{js/owl.carousel.min.js}" type="text/javascript"></script>
     <script th:src="@{js/bootstrap-input-spinner.js}"></script>
     <script th:src="@{js/jquery.magnific-popup.min.js}"></script>
+    <script th:src="@{js/bootstrap.min.js}"></script>
     <!-- Main JS File -->
     <script th:src="@{js/main.js}"></script>
     <script th:src="@{js/index.js}"></script>
