index_trangchu_fix4

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/template.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Page</title>
 </head>
 <body>
         <main class="main" layout:fragment="content">
@@ -784,7 +784,6 @@
                     </div><!-- End .tab-content -->
                 </div><!-- End .container -->
             </div><!-- End .bg-light pt-4 pb-4 -->
-
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-6 col-md-4">
@@ -796,7 +795,7 @@
                                 <h4 class="banner-subtitle">Weekend Offer</h4>
                                 <img class="banner-title-img" src="images/index/banners/banner-6-title.png" alt="Banner-6">
                                 <h4 class="banner-price"><span class="off" style="font-weight: 600;">Save <span class="price">$19.99</span></span></h4>
-                                <a href="#" class="banner-link">Buy Now<i class="las la-long-arrow-alt-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-md-4 -->
@@ -810,7 +809,7 @@
                                 <h4 class="banner-subtitle" style="letter-spacing: 0.1em;">Amazing Deal on an</h4>
                                 <h2 class="banner-title mb-0" style="font-size: 3rem;">XBOX ONE</h2>
                                 <h4 class="banner-price"><span class="off" style="font-weight: 600;">Save $50</span></h4>
-                                <a href="#" class="banner-link">Buy Now<i class="bi bi-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-md-4 -->
@@ -823,12 +822,14 @@
                             <div class="banner-content">
                                 <h4 class="banner-price text-white mb-1">Save $29.00</h4>
                                 <img class="banner-title-img mb-2" src="images/index/banners/banner-8-title.png" alt="Banner-8">
-                                <a href="#" class="banner-link">Buy Now<i class="bi bi-arrow-right"></i></a>
+                                <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                             </div>
                         </div><!-- End .banner -->
                     </div><!-- End .col-md-4 -->
                 </div><!-- End .row -->
-            </div><!-- End .container -->
+            </div>
+
+
 
             <div class="container">
                 <hr class="mt-0 mb-4">
