--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,7 +4,7 @@ html {
     font-size: 62.5%;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-    font-size-adjust: 100%
+    font-size-adjust: 100%;
 }
 
 html, body {
@@ -683,7 +683,7 @@ blockquote.text-white cite span {
 }
 
 .header-dropdown > a::after, .header-dropdown > span::after {
-    font-family: "molla";
+    font-family: "Poppins";
     content: '\f110';
     position: absolute;
     right: 0;
@@ -1600,7 +1600,7 @@ blockquote.text-white cite span {
     }
 
     .top-menu:not(.top-link-menu) > li::after {
-        font-family: "molla";
+        font-family: "Poppins";
         content: '\f110';
         position: absolute;
         right: 0;
@@ -2161,7 +2161,7 @@ blockquote.text-white cite span {
 
 .category-dropdown .dropdown-toggle:after {
     content: '\f131';
-    font-family: 'molla';
+    font-family: 'Poppins';
     border: none;
     font-size: 2.3rem;
     line-height: 1;
@@ -2367,7 +2367,7 @@ blockquote.text-white cite span {
 
 .menu-vertical.sf-arrows .sf-with-ul::after {
     display: block;
-    font-family: 'molla';
+    font-family: 'Poppins';
     content: '\f112';
     position: absolute;
     right: 1.8rem;
@@ -2706,7 +2706,7 @@ blockquote.text-white cite span {
 }
 
 .mmenu-btn::after {
-    font-family: "molla";
+    font-family: "Poppins";
     content: '\f110';
     display: inline-block
 }
@@ -4431,7 +4431,7 @@ p {
     display: block;
     height: auto;
     content: '';
-    font-family: 'molla';
+    font-family: 'Poppins';
     content: '\f110';
     position: absolute;
     left: auto;
@@ -5760,7 +5760,7 @@ p {
 .breadcrumb-item + .breadcrumb-item:before {
     color: #999999;
     content: '\f112';
-    font-family: "molla";
+    font-family: "Poppins";
     padding-right: .7rem;
     font-size: 1.1rem;
     vertical-align: middle;
@@ -6080,7 +6080,7 @@ p {
     right: 1.2rem;
     top: 50%;
     color: #c96;
-    font-family: "molla";
+    font-family: "Poppins";
     line-height: 1;
     transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -7332,7 +7332,7 @@ p {
     font-size: 1.4rem;
     letter-spacing: 0.1em;
     line-height: 1;
-    font-family: "molla"
+    font-family: "Poppins"
 }
 
 .ratings:before, .ratings-val:before {
@@ -7426,7 +7426,7 @@ p {
 }
 
 .btn-product:before {
-    font-family: "molla";
+    font-family: "Poppins";
     margin-right: .9rem
 }
 
@@ -7497,7 +7497,7 @@ p {
 }
 
 .btn-product-icon:before {
-    font-family: "molla"
+    font-family: "Poppins"
 }
 
 .btn-product-icon span {
@@ -9413,7 +9413,7 @@ p {
 }
 
 .testimonial-icon:before {
-    font-family: 'molla';
+    font-family: 'Poppins';
     content: '\f10d';
     display: inline-block;
     font-style: normal;
@@ -9560,7 +9560,7 @@ small.form-text {
 }
 
 .select-custom::after {
-    font-family: "molla";
+    font-family: "Poppins";
     content: '\f110';
     position: absolute;
     display: inline-block;
@@ -9642,7 +9642,7 @@ small.form-text {
     color: #fff;
     background-image: none;
     font-size: 1rem;
-    font-family: 'molla';
+    font-family: 'Poppins';
     content: '\ec2d';
     line-height: 1;
     text-align: center;
@@ -10564,7 +10564,7 @@ small.form-text {
     height: 5rem;
     margin-top: -2.5rem;
     margin-left: -2.5rem;
-    font-family: "molla";
+    font-family: "Poppins";
     position: absolute;
     left: 50%;
     top: 50%;
@@ -11594,7 +11594,7 @@ button:focus {
     color: #333;
     content: '\f110';
     display: block;
-    font-family: 'molla';
+    font-family: 'Poppins';
     font-size: 1.4rem;
     line-height: 1;
     position: absolute;
@@ -11689,7 +11689,7 @@ button:focus {
 
 .filter-colors a:after {
     color: #fff;
-    font-family: 'molla';
+    font-family: 'Poppins';
     content: '\ec2d';
     font-size: 1rem;
     line-height: 1;
@@ -12892,7 +12892,7 @@ button:focus {
 
 .entry-video a:after {
     content: '\ec2c';
-    font-family: "molla";
+    font-family: "Poppins";
     display: -ms-inline-flexbox;
     display: inline-flex;
     align-items: center;
@@ -12997,7 +12997,7 @@ button:focus {
 }
 
 .read-more:after {
-    font-family: 'molla';
+    font-family: 'Poppins';
     content: '\f274';
     font-size: 1.5rem;
     line-height: 1;
@@ -13151,7 +13151,7 @@ button:focus {
     color: #fff;
     position: absolute;
     content: '\f24d';
-    font-family: "molla";
+    font-family: "Poppins";
     top: 2.6rem
 }
 
@@ -13551,7 +13551,7 @@ button:focus {
     font-weight: normal;
     font-size: 3rem;
     line-height: 1;
-    font-family: 'molla';
+    font-family: 'Poppins';
     position: absolute;
     left: 3rem;
     top: 4rem;
@@ -13707,7 +13707,7 @@ button:focus {
 .pager-link:after {
     color: #333;
     display: block;
-    font-family: 'molla';
+    font-family: 'Poppins';
     font-size: 1.5rem;
     line-height: 1;
     position: absolute;
@@ -13864,7 +13864,7 @@ button:focus {
 }
 
 .comment-reply:after {
-    font-family: 'molla';
+    font-family: 'Poppins';
     content: '\f279';
     font-size: 1.5rem;
     margin-left: .7rem
@@ -15687,7 +15687,7 @@ button:focus {
 }
 
 .nav-dashboard .nav-link:before {
-    font-family: "molla";
+    font-family: "Poppins";
     content: '\f274';
     display: block;
     font-size: 1.5rem;
@@ -16944,15 +16944,15 @@ button:focus {
 }
 
 @font-face {
-    font-family: 'molla';
-    src: url("../fonts/molla0ab2.eot?74273691");
-    src: url("../fonts/molla0ab2.eot?74273691#iefix") format("embedded-opentype"), url("../fonts/molla0ab2.woff2?74273691") format("woff2"), url("../fonts/molla0ab2.woff?74273691") format("woff"), url("../fonts/molla0ab2.ttf?74273691") format("truetype"), url("../fonts/molla0ab2.svg?74273691#molla") format("svg");
+    font-family: 'Poppins';
+    src: url("../fonts/Poppins0ab2.eot?74273691");
+    src: url("../fonts/Poppins0ab2.eot?74273691#iefix") format("embedded-opentype"), url("../fonts/Poppins0ab2.woff2?74273691") format("woff2"), url("../fonts/Poppins0ab2.woff?74273691") format("woff"), url("../fonts/Poppins0ab2.ttf?74273691") format("truetype"), url("../fonts/Poppins0ab2.svg?74273691#Poppins") format("svg");
     font-weight: normal;
     font-style: normal
 }
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-family: "molla";
+    font-family: "Poppins";
     font-style: normal;
     font-weight: normal;
     speak: none;
