index_trangchu_fix6

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1140,8 +1140,7 @@
                             <input type="email" class="form-control form-control-white"
                                    placeholder="Enter your Email Address" aria-label="Email Adress" required>
                             <div class="input-group-append">
-                                <button class="btn btn-primary-white btn-rounded" type="submit"><span>Subscribe</span><i
-                                        class="icon-long-arrow-right"></i></button>
+                                <button class="btn btn-primary-white btn-rounded" type="submit"><span>Subscribe</span><i class="las la-arrow-right"></i></button>
                             </div><!-- .End .input-group-append -->
                         </div><!-- .End .input-group -->
                     </form>
@@ -1157,7 +1156,7 @@
             </div><!-- End .heading-left -->
 
             <div class="heading-right">
-                <a href="category.html" class="title-link">View more products <i class="icon-long-arrow-right"></i></a>
+                <a href="category.html" class="title-link">View more products <i class="las la-arrow-right"></i></a>
             </div><!-- End .heading-right -->
         </div><!-- End .heading -->
 
@@ -1326,7 +1325,7 @@
                 </div><!-- End .heading-left -->
 
                 <div class="heading-right">
-                    <a href="blog.html" class="title-link">View more articles <i class="icon-long-arrow-right"></i></a>
+                    <a href="blog.html" class="title-link">View more articles <i class="las la-arrow-right"></i></a>
                 </div><!-- End .heading-right -->
             </div><!-- End .heading -->
 
