--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -9,6 +9,27 @@
                         <div class="header-left">
                             <a href="tel:#"><i class="las la-phone"></i>Call: +0123 456 789</a>
                         </div><!-- End .header-left -->
+                        <div class="header-right">
+                            <ul class="top-menu">
+                                <li>
+                                    <a href="#">Links</a>
+                                    <ul>
+                                        <li>
+                                            <div class="header-dropdown">
+                                                <a href="#">USD</a>
+                                                <div class="header-menu">
+                                                    <ul>
+                                                        <li><a href="#">Eur</a></li>
+                                                        <li><a href="#">Usd</a></li>
+                                                    </ul>
+                                                </div><!-- End .header-menu -->
+                                            </div>
+                                        </li>
+                                        <li><a href="#signin-modal" data-toggle="modal">Sign in / Sign up</a></li>
+                                    </ul>
+                                </li>
+                            </ul><!-- End .top-menu -->
+                        </div>
                     </div><!-- End .container -->
                 </div><!-- End .header-top -->
 
@@ -21,7 +42,7 @@
                             </button>
 
                             <a href="index.html" class="logo">
-                                <img src="assets/images/demos/demo-3/logo.png" alt="Molla Logo" width="105" height="25">
+                                <img src="" alt="LPD Logo" width="105" height="25">
                             </a>
                         </div><!-- End .header-left -->
 
