index_trangchu_fix6

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -150,7 +150,7 @@
                     <a href="#">
                         <img src="images/index/banners/banner-4.jpg" alt="Banner">
                     </a>
-                    <div class="banner-content" style="left: auto; right: 3rem; align-items: flex-start;">
+                    <div class="banner-content" th:style="|left: auto; right: 3rem; align-items: flex-start;|">
                         <h4 class="banner-subtitle">Weekend Sale</h4>
                         <img class="banner-title-img" src="images/index/banners/banner-4-title.png" alt="Banner-4">
                         <h4 class="banner-price"><span class="off">25% off</span></h4>
@@ -1126,7 +1126,7 @@
 
     <div class="container">
         <div class="cta cta-horizontal cta-horizontal-box bg-image mb-4"
-             style="background-image: url(images/index/bg-2.jpg);">
+             th:style="'background-image: url(images/index/bg-2.jpg);'">
             <div class="row align-items-center">
                 <div class="col-lg-5">
                     <h3 class="cta-title text-primary">Join Our Newsletter</h3><!-- End .cta-title -->
