index_trangchu_fix6

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
                     <div class="sidenav-title">Browse Categories</div><!-- End .sidenav-title -->
                     <ul class="menu-vertical sf-arrows">
                         <li>
-                            <a href="product.html" class="sf-with-ul">Playstation</a>
+                            <a href="product.html">Playstation</a>
                             <div class="megamenu megamenu-sm">
                                 <div class="row no-gutters">
                                     <div class="col-md-6">
@@ -46,7 +46,7 @@
                             </div><!-- End .megamenu megamenu-sm -->
                         </li>
                         <li class="megamenu-container">
-                            <a href="category.html" class="sf-with-ul">XBOX</a>
+                            <a href="category.html">XBOX</a>
                             <div class="megamenu">
                                 <div class="row no-gutters">
                                     <div class="col-md-8">
