--- a/src/main/resources/static/css/login_home.css
+++ b/src/main/resources/static/css/login_home.css
@@ -209,6 +209,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Poppins;
 }
 
 body, html {
@@ -373,10 +374,11 @@ iframe {
 .login100-form-title {
     display: block;
     font-family: Poppins-Bold;
-    font-size: 39px;
+    font-size: 1.75rem;
     color: #333333;
     line-height: 1.2;
     text-align: center;
+    margin-bottom: .75rem;
 }
 
 
@@ -394,15 +396,17 @@ iframe {
 
 .input100 {
     font-family: Poppins-Medium;
-    font-size: 16px;
-    color: #333333;
-    line-height: 1.2;
-
+    line-height: 1.2rem;
     display: block;
     width: 100%;
-    height: 55px;
-    background: transparent;
-    padding: 0 7px 0 43px;
+    height: 2rem;
+    background-color: #f5f8fa;
+    border-color: #f5f8fa;
+    color: #5e6278;
+    transition: color .2s ease,background-color .2s ease;
+    padding: .825rem 1.5rem;
+    font-size: 1.15rem;
+
 }
 
 
