--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -66,7 +66,7 @@
                                         <div class="icon">
                                             <i class="las la-user"></i>
                                         </div>
-                                        <p>Register/Login</p>
+                                        <p>Account</p>
                                     </a>
                                 </div><!-- End .compare-dropdown -->
 
