--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -14,11 +14,13 @@
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{css/plugins/owl-carousel/owl.carousel.css}">
     <link rel="stylesheet" th:href="@{css/plugins/magnific-popup/magnific-popup.css}">
+    <link rel="stylesheet" th:href="@{css/plugins/nouislider/nouislider.css}">
     <!-- Main CSS File -->
     <link rel="stylesheet" th:href="@{css/style.css}">
     <link rel="stylesheet" th:href="@{css/skin-index.css}">
     <link rel="stylesheet" th:href="@{css/index.css}">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+
 
 
 </head>
