--- a/src/main/resources/templates/login_home.html
+++ b/src/main/resources/templates/login_home.html
@@ -1,82 +1,53 @@
-
 <html xmlns:th="http://www.thymeleaf.org"
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-	<title>Login</title>
-	<link rel="stylesheet" type="text/css" th:href="@{css/bootstrap.min.css}">
-	<link rel="stylesheet" type="text/css" th:href="@{css/login_home.css}">
-	<link rel = "stylesheet" th:href = "@{https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css}" >
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" th:href="@{css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{css/login_home.css}">
+    <link rel="stylesheet"
+          th:href="@{https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 <body>
-	
-	<div class="limiter">
-		<div class="container-login100" th:style="'background-image: url(images/login_home/bg-01.jpg)'">
-			<div class="wrap-login100"  style="padding: 65px 55px 54px 55px;">
-				<form class="login100-form validate-form" name="f" method="POST" th:action="@{/login_security}">
-					<span class="login100-form-title" style="padding-bottom: 49px">
-						Login
+
+<div class="limiter">
+    <div class="container-login100" th:style="'background-image: url(images/login_home/bg-01.jpg)'">
+        <div class="wrap-login100" style="padding: 65px 55px 54px 55px;">
+            <form class="login100-form validate-form" name="f" method="POST" th:action="@{/login_security}">
+					<span class="login100-form-title">
+						Sign in
 					</span>
+                <div class="text-center">
+                    <span>New Here? <a href="#" class="font-weight-bold">Create an Account</a></span>
+                </div>
+                <div class="wrap-input100 validate-input" style="margin-bottom: 23px">
+                    <span>Username</span>
+                    <input class="input100" type="text" name="username">
+                </div>
 
-					<div class="wrap-input100 validate-input" style="margin-bottom: 23px">
-						<i class="lar la-user"></i><span>Username</span>
-						<input class="input100" type="text" name="username" placeholder="Type your username">
-					</div>
+                <div class="wrap-input100 validate-input">`````
+                    <span>Password</span>
+                    <input class="input100" type="password" name="password">
+                </div>
 
-					<div class="wrap-input100 validate-input">
-						<i class="las la-lock"></i><span>Password</span>
-						<input class="input100" type="password" name="password" placeholder="Type your password">
-					</div>
+                <div style="padding-top: 20px ; padding-bottom: 20px">
+                    <input type="checkbox" id="signin-remember">
+                    <label for="signin-remember">Remember Me</label>
+                    <a href="#" style="padding-left: 20px">Forgot Your Password?</a>
+                </div>
 
-					<div style="padding-top: 20px ; padding-bottom: 20px">
-						<input type="checkbox" id="signin-remember">
-						<label for="signin-remember">Remember Me</label>
-						<a href="#" style="padding-left: 20px">Forgot Your Password?</a>
-					</div>
+                <div class="container-login100-form-btn">
+                    <div class="wrap-login100-form-btn">
+                        <div class="login100-form-bgbtn"></div>
+                        <button class="login100-form-btn" name="submit" type="submit">
+                            Login
+                        </button>
+                    </div>
+                </div>
 
-
-					
-					<div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn" name="submit" type="submit">
-								Login
-							</button>
-						</div>
-					</div>
-
-					<div class="txt1 text-center" style="padding-top: 54px;padding-bottom: 20px">
-						<span>
-							Or Sign Up Using
-						</span>
-					</div>
-
-					<div class="flex-c-m">
-						<a href="#" class="login100-social-item bg1">
-							<i class="lab la-facebook-f"></i>
-						</a>
-
-						<a href="#" class="login100-social-item bg2">
-							<i class="lab la-twitter"></i>
-						</a>
-
-						<a href="#" class="login100-social-item bg3">
-							<i class="lab la-google"></i>
-						</a>
-					</div>
-
-					<div class="flex-col-c" style="padding-top: 155px">
-						<span class="txt1" style="padding-bottom: 17px">
-							Or Sign Up Using
-						</span>
-
-						<a href="#" class="txt2">
-							Sign Up
-						</a>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
