index_trangchu_fix6

--- a/src/main/resources/templates/detailProduct.html
+++ b/src/main/resources/templates/detailProduct.html
@@ -42,33 +42,34 @@
                         <!-- End .product-gallery-image -->
 
                         <!-- End .product-gallery-image -->
+
                         <div class="owl-stage-outer">
                             <div class="owl-stage"
-                                 style="transform: translate3d(0px, 0px, 0px); transition: all 0.4s ease 0s; width: 1558px;">
+                                 th:style="|transform: translate3d(0px, 0px, 0px); transition: all 0.4s ease 0s; width: 1558px;|">
                                 <div class="owl-item active" style="width: 389.333px;">
                                     <figure class="product-gallery-image">
-                                        <img src="assets/images/products/single/gallery/1.jpg"
+                                        <img  src="images/index/products/product-1.jpg"
                                              data-zoom-image="assets/images/products/single/gallery/1-big.jpg"
                                              alt="product image">
                                     </figure>
                                 </div>
                                 <div class="owl-item active" style="width: 389.333px;">
                                     <figure class="product-gallery-image">
-                                        <img src="assets/images/products/single/gallery/2.jpg"
+                                        <img src="images/index/products/product-1.jpg"
                                              data-zoom-image="assets/images/products/single/gallery/2-big.jpg"
                                              alt="product image">
                                     </figure>
                                 </div>
                                 <div class="owl-item active" style="width: 389.333px;">
                                     <figure class="product-gallery-image">
-                                        <img src="assets/images/products/single/gallery/3.jpg"
+                                        <img src="images/index/products/product-1.jpg"
                                              data-zoom-image="assets/images/products/single/gallery/3-big.jpg"
                                              alt="product image">
                                     </figure>
                                 </div>
                                 <div class="owl-item active" style="width: 389.333px;">
                                     <figure class="product-gallery-image">
-                                        <img src="assets/images/products/single/gallery/4.jpg"
+                                        <img src="images/index/products/product-1.jpg"
                                              data-zoom-image="assets/images/products/single/gallery/4-big.jpg"
                                              alt="product image">
                                     </figure>
@@ -91,7 +92,6 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h1 class="product-title">Beige V neck button cardigan</h1><!-- End .product-title -->
-
                             <div class="ratings-container">
                                 <div class="ratings">
                                     <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
