--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -29,6 +29,8 @@
             <div layout:replace="layout/header :: header"></div>
         <div class="wrap-container" >
             <div layout:fragment="content"></div>
+            <div layout:fragment="about"></div>
+            <div layout:fragment="products"></div>
             <div layout:replace="layout/footer :: footer"></div>
         </div>
     </div>
