--- a/src/main/resources/static/css/skin-index.css
+++ b/src/main/resources/static/css/skin-index.css
@@ -1080,7 +1080,7 @@ a:hover, a:focus {
 
 .product-details-action .btn-cart:hover, .product-details-action .btn-cart:focus {
     border-color: #fcb842;
-    background-color: #fcb842
+    background-color: #fcb842;
 }
 
 .product-details-tab .nav.nav-pills .nav-link:hover, .product-details-tab .nav.nav-pills .nav-link:focus {
