--- a/src/main/resources/templates/detailProduct.html
+++ b/src/main/resources/templates/detailProduct.html
@@ -18,13 +18,13 @@
 
             <nav class="product-pager ml-auto" aria-label="Product">
                 <a class="product-pager-link product-pager-prev" href="#" aria-label="Previous" tabindex="-1">
-                    <i class="icon-angle-left"></i>
+                    <i class="las la-angle-left"></i>
                     <span>Prev</span>
                 </a>
 
                 <a class="product-pager-link product-pager-next" href="#" aria-label="Next" tabindex="-1">
                     <span>Next</span>
-                    <i class="icon-angle-right"></i>
+                    <i class="las la-angle-right"></i>
                 </a>
             </nav><!-- End .pager-nav -->
         </div><!-- End .container -->
@@ -39,25 +39,24 @@
                             <div class="row">
                                 <figure class="product-main-image">
                                     <img id="product-zoom" src="images/index/products/product-1.jpg" data-zoom-image="images/index/products/product-1.jpg" alt="product image">
-                                        <i class="icon-arrows"></i>
                                     </a>
                                 </figure><!-- End .product-main-image -->
 
                                 <div id="product-zoom-gallery" class="product-image-gallery">
-                                    <a class="product-gallery-item" href="#" data-image="assets/images/products/single/centered/1.jpg" data-zoom-image="assets/images/products/single/centered/1-big.jpg">
-                                        <img src="images/index/products/product-1.jpg" alt="product side">
+                                    <a class="product-gallery-item" href="#" data-image="images/index/products/3-big.jpg" data-zoom-image="images/index/products/3-big.jpg">
+                                        <img src="images/index/products/3-big.jpg" alt="product side">
                                     </a>
 
-                                    <a class="product-gallery-item" href="#" data-image="assets/images/products/single/centered/2.jpg" data-zoom-image="assets/images/products/single/centered/2-big.jpg">
-                                        <img src="images/index/products/product-1.jpg" alt="product cross">
+                                    <a class="product-gallery-item" href="#" data-image="images/index/products/product-2.jpg" data-zoom-image="images/index/products/product-2.jpg">
+                                        <img src="images/index/products/product-2.jpg" alt="product cross">
                                     </a>
 
-                                    <a class="product-gallery-item" href="#" data-image="assets/images/products/single/centered/3.jpg" data-zoom-image="assets/images/products/single/centered/3-big.jpg">
-                                        <img src="images/index/products/product-1.jpg" alt="product with model">
+                                    <a class="product-gallery-item" href="#" data-image="images/index/products/product-3.jpg" data-zoom-image="images/index/products/product-3.jpg">
+                                        <img src="images/index/products/product-3.jpg" alt="product with model">
                                     </a>
 
-                                    <a class="product-gallery-item active" href="#" data-image="assets/images/products/single/centered/4.jpg" data-zoom-image="assets/images/products/single/centered/4-big.jpg">
-                                        <img src="images/index/products/product-1.jpg" alt="product back">
+                                    <a class="product-gallery-item active" href="#" data-image="images/index/products/product-4.jpg" data-zoom-image="images/index/products/product-4.jpg">
+                                        <img src="images/index/products/product-4.jpg" alt="product back">
                                     </a>
                                 </div><!-- End .product-image-gallery -->
                             </div><!-- End .row -->
@@ -103,8 +102,6 @@
                                         <option value="xl">Extra Large</option>
                                     </select>
                                 </div><!-- End .select-custom -->
-
-                                <a href="#" class="size-guide"><i class="icon-th-list"></i>size guide</a>
                             </div><!-- End .details-filter-row -->
 
                             <div class="product-details-action">
@@ -113,11 +110,11 @@
                                         <input type="number" id="qty" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required="" style="display: none;"><div class="input-group  input-spinner"><div class="input-group-prepend"><button style="min-width: 26px" class="btn btn-decrement btn-spinner" type="button"><i class="icon-minus"></i></button></div><input type="text" style="text-align: center" class="form-control " required="" placeholder=""><div class="input-group-append"><button style="min-width: 26px" class="btn btn-increment btn-spinner" type="button"><i class="icon-plus"></i></button></div></div>
                                     </div><!-- End .product-details-quantity -->
 
-                                    <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                    <a href="#" class="btn-product btn-cart"><span><i class="las la-cart-plus"></i>add to cart</span></a>
                                 </div><!-- End .details-action-col -->
 
                                 <div class="details-action-wrapper">
-                                    <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
+                                    <a href="#" class="btn-product btn-wishlist " title="Wishlist"><span><i class="lar la-heart"></i>Add to Wishlist</span></a>
                                     <a href="#" class="btn-product btn-compare" title="Compare"><span>Add to Compare</span></a>
                                 </div><!-- End .details-action-wrapper -->
                             </div><!-- End .product-details-action -->
@@ -132,10 +129,9 @@
 
                                 <div class="social-icons social-icons-sm">
                                     <span class="social-label">Share:</span>
-                                    <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                    <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                    <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                    <a href="#" class="social-icon" title="Pinterest" target="_blank"><i class="icon-pinterest"></i></a>
+                                    <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="lab la-facebook-f"></i></a>
+                                    <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="lab la-twitter"></i></a>
+                                    <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="lab la-instagram"></i></a>
                                 </div>
                             </div><!-- End .product-details-footer -->
                         </div><!-- End .product-details -->
