index_trangchu_fix8

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -52,6 +52,7 @@
 
                                             <h3 class="product-title">
                                                 <a href="#">Beige knitted elastic runner shoes</a>
+                                                <span>Address seller:So 8,Ton That Thuyet, Ha Noi</span>
                                             </h3><!-- End .product-title -->
                                         </div><!-- End .product -->
                                     </td>
