--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -280,7 +280,7 @@
                         <div class="product">
                             <figure class="product-media">
                                 <span class="product-label label-sale">Sale</span>
-                                <a href="product.html">
+                                <a href="/productDetail">
                                     <img src="images/index/products/product-1.jpg" alt="Product image"
                                          class="product-image">
                                 </a>
