--- a/src/main/resources/static/css/create_product.css
+++ b/src/main/resources/static/css/create_product.css
@@ -1,112 +1,43 @@
-body {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    position: relative;
-}
-.wrapper {
-    background-color: #fcd6d6;
-    padding: 25px;
-    border-radius: 5px;
-    max-width: 100%;
-    margin: 50px 50px;
-    align-self: center;
-    box-sizing: border-box;
-}
-
-section {
-    display: none;
-}
-
-section.active {
-    display: block;
-}
-section input{
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid #ddd;
-    outline: 0;
-    background-color: #F5F7FA;
-    padding: 10px;
-    margin-bottom: 10px;
-    letter-spacing: 1.4px;
-}
-
-.images {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px 50px;
-    width: 500px;
-
-}
-.images .img,
-.images .pic {
-    flex-basis: 31%;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    border: 1px solid #000000;
-    margin-top: 20px;
-    margin-left: 50px;
-}
-.images .img {
-    width: 112px;
-    height: 112px;
-    background-size: cover;
-    margin-right: 10px;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    position: relative;
+.image_container {
+    height: 120px;
+    width: 200px;
+    border-radius: 6px;
     overflow: hidden;
-}
-.images .img:nth-child(3n) {
-    margin-right: 0;
+    margin: 10px;
 }
 
-.images .img span {
-    display: none;
-    text-transform: capitalize;
-    z-index: 2;
-
+.image_container img {
+    height: 100%;
+    width: auto;
+    object-fit: cover;
 }
 
-.images .img:hover span {
-    display: block;
-    color: #fff;
-}
-.images .pic {
-    background-color: #F5F7FA;
-    align-self: center;
-    text-align: center;
-    padding: 40px 0;
-    text-transform: uppercase;
-    color: #848EA1;
-    font-size: 12px;
+.image_container span {
+    top: -6px;
+    right: 8px;
+    color: red;
+    font-size: 28px;
+    font-weight: normal;
     cursor: pointer;
-
 }
-@media screen and (max-width: 400px) {
-    .wrapper {
-        margin-top: 0;
-    }
-    section input{
-        font-size: 8px;
-    }
-    .images .img,
-    .images .pic {
-        flex-basis: 100%;
-        margin-right: 0;
-    }
-}
-
-.button_form{
-    margin-top: 50px;
-    background: #f1a75f;
-    border-radius: 20px;
-    float: right;
-
+.form_wrapperss{
+    background: #fff;
+    width: 90%;
+    max-width: 100%;
+    box-sizing: border-box;
+    padding: 25px;
+    margin: 8% auto 0;
+    position: relative;
+    border-top: 5px solid #cc9966;
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    -webkit-transition: none;
+    transition: none;
+    -webkit-animation: expand 0.8s 0.6s ease-out forwards;
+    animation: expand 0.8s 0.6s ease-out forwards;
 }
