--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,10 +4,10 @@
       layout:decorate="~{layout/template.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About</title>
 </head>
 <body>
-<div layout:fragment="about">
+<div layout:fragment="content">
     <div class="wrap-container">
         <main class="main">
             <div class="container">
