--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -62,7 +62,7 @@
                         <div class="header-right">
                             <div class="header-dropdown-link">
                                 <div class="account">
-                                    <a href="dashboard.html" title="My account">
+                                    <a href="/profile" title="My account">
                                         <div class="icon">
                                             <i class="las la-user"></i>
                                         </div>
@@ -71,12 +71,11 @@
                                 </div><!-- End .compare-dropdown -->
 
                                 <div class="wishlist">
-                                    <a href="wishlist.html" title="Wishlist">
+                                    <a href="/pay" title="Wishlist">
                                         <div class="icon">
-                                            <i class="las la-envelope"></i>
-                                            <span class="wishlist-count badge">3</span>
+                                            <i class="las la-wallet"></i>
                                         </div>
-                                        <p>Support</p>
+                                        <p>100$</p>
                                     </a>
                                 </div><!-- End .compare-dropdown -->
 
