--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,9 @@
 ﻿@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 
+*{
+   font-family: "Line Awesome Free";
+}
+
 html {
     font-size: 62.5%;
     -webkit-text-size-adjust: 100%;
@@ -17783,6 +17787,7 @@ button:focus {
 }
 
 .icon-minus:before {
+    font-family: "Line Awesome Free";
     content: '\f28e'
 }
 
@@ -17875,7 +17880,7 @@ button:focus {
 }
 
 .icon-plus:before {
-    content: '\f2c2'
+    content: '\f067'
 }
 
 .icon-quora:before {
