--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/template.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Cart</title>
 </head>
 <body>
 <div class="page-wrapper" layout:fragment="content">
@@ -46,7 +46,8 @@
                                         <div class="product">
                                             <figure class="product-media">
                                                 <a href="#">
-                                                    <img src="static/images/index/products/product-1.jpg" alt="Product image">
+                                                    <img src="static/images/index/products/product-1.jpg"
+                                                         alt="Product image">
                                                 </a>
                                             </figure>
 
@@ -58,19 +59,20 @@
                                     </td>
                                     <td class="price-col">$84.00</td>
                                     <td class="quantity-col">
-                                        <div class="cart-product-quantity">
-                                            <input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required>
-                                        </div><!-- End .cart-product-quantity -->
+                                        6
                                     </td>
                                     <td class="total-col">$84.00</td>
-                                    <td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
+                                    <td class="remove-col">
+                                        <button class="btn-remove"><i class="las la-times"></i></button>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td class="product-col">
                                         <div class="product">
                                             <figure class="product-media">
                                                 <a href="#">
-                                                    <img src="static/images/index/product/product-2.jpg" alt="Product image">
+                                                    <img src="static/images/index/product/product-2.jpg"
+                                                         alt="Product image">
                                                 </a>
                                             </figure>
 
@@ -81,12 +83,12 @@
                                     </td>
                                     <td class="price-col">$76.00</td>
                                     <td class="quantity-col">
-                                        <div class="cart-product-quantity">
-                                            <input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required>
-                                        </div><!-- End .cart-product-quantity -->
+                                       5
                                     </td>
                                     <td class="total-col">$76.00</td>
-                                    <td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
+                                    <td class="remove-col">
+                                        <button class="btn-remove"><i class="las la-times"></i></button>
+                                    </td>
                                 </tr>
                                 </tbody>
                             </table><!-- End .table table-wishlist -->
@@ -97,13 +99,15 @@
                                         <div class="input-group">
                                             <input type="text" class="form-control" required placeholder="coupon code">
                                             <div class="input-group-append">
-                                                <button class="btn btn-outline-primary-2" type="submit"><i class="icon-long-arrow-right"></i></button>
+                                                <button class="btn btn-outline-primary-2" type="submit"><i
+                                                        class="las la-long-arrow-alt-right"></i></button>
                                             </div><!-- .End .input-group-append -->
                                         </div><!-- End .input-group -->
                                     </form>
                                 </div><!-- End .cart-discount -->
 
-                                <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i class="icon-refresh"></i></a>
+                                <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i
+                                        class="icon-refresh"></i></a>
                             </div><!-- End .cart-bottom -->
                         </div><!-- End .col-lg-9 -->
                         <aside class="col-lg-3">
@@ -124,8 +128,10 @@
                                     <tr class="summary-shipping-row">
                                         <td>
                                             <div class="custom-control custom-radio">
-                                                <input type="radio" id="free-shipping" name="shipping" class="custom-control-input">
-                                                <label class="custom-control-label" for="free-shipping">Free Shipping</label>
+                                                <input type="radio" id="free-shipping" name="shipping"
+                                                       class="custom-control-input">
+                                                <label class="custom-control-label" for="free-shipping">Free
+                                                    Shipping</label>
                                             </div><!-- End .custom-control -->
                                         </td>
                                         <td>$0.00</td>
@@ -134,8 +140,10 @@
                                     <tr class="summary-shipping-row">
                                         <td>
                                             <div class="custom-control custom-radio">
-                                                <input type="radio" id="standart-shipping" name="shipping" class="custom-control-input">
-                                                <label class="custom-control-label" for="standart-shipping">Standart:</label>
+                                                <input type="radio" id="standart-shipping" name="shipping"
+                                                       class="custom-control-input">
+                                                <label class="custom-control-label"
+                                                       for="standart-shipping">Standart:</label>
                                             </div><!-- End .custom-control -->
                                         </td>
                                         <td>$10.00</td>
@@ -144,15 +152,18 @@
                                     <tr class="summary-shipping-row">
                                         <td>
                                             <div class="custom-control custom-radio">
-                                                <input type="radio" id="express-shipping" name="shipping" class="custom-control-input">
-                                                <label class="custom-control-label" for="express-shipping">Express:</label>
+                                                <input type="radio" id="express-shipping" name="shipping"
+                                                       class="custom-control-input">
+                                                <label class="custom-control-label"
+                                                       for="express-shipping">Express:</label>
                                             </div><!-- End .custom-control -->
                                         </td>
                                         <td>$20.00</td>
                                     </tr><!-- End .summary-shipping-row -->
 
                                     <tr class="summary-shipping-estimate">
-                                        <td>Estimate for Your Country<br> <a href="dashboard.html">Change address</a></td>
+                                        <td>Estimate for Your Country<br> <a href="dashboard.html">Change address</a>
+                                        </td>
                                         <td>&nbsp;</td>
                                     </tr><!-- End .summary-shipping-estimate -->
 
@@ -163,10 +174,12 @@
                                     </tbody>
                                 </table><!-- End .table table-summary -->
 
-                                <a href="checkout.html" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO CHECKOUT</a>
+                                <a href="checkout.html" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO
+                                    CHECKOUT</a>
                             </div><!-- End .summary -->
 
-                            <a href="category.html" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE SHOPPING</span><i class="icon-refresh"></i></a>
+                            <a href="category.html" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE SHOPPING</span><i
+                                    class="las la-long-arrow-alt-right"></i></a>
                         </aside><!-- End .col-lg-3 -->
                     </div><!-- End .row -->
                 </div><!-- End .container -->
