--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -10,6 +10,7 @@
     <meta name="description" content="LPD GameStore">
     <meta name="author" content="p-themes">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link type="text/css" rel="stylesheet" th:href="@{vendors/css/line-awesome.min.css}">
     <!-- Plugins CSS File -->
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{css/plugins/owl-carousel/owl.carousel.css}">
@@ -21,24 +22,18 @@
     <link rel="stylesheet" th:href="@{css/index.css}">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
-
-
 </head>
 <body>
     <div class="page-wrapper">
             <div layout:replace="layout/header :: header"></div>
         <div class="wrap-container" >
             <div layout:fragment="content"></div>
-            <div layout:fragment="about"></div>
-            <div layout:fragment="products"></div>
-            <div layout:fragment="pay"></div>
             <div layout:replace="layout/footer :: footer"></div>
         </div>
     </div>
             <div layout:replace="layout/AddOn :: addon"></div>
     <!-- Plugins JS File -->
     <script th:src="@{js/jquery.min.js}" type="text/javascript"></script>
-    <script th:src="@{js/bootstrap.min.js}"></script>
     <script th:src="@{js/bootstrap.bundle.min.js}" type="text/javascript"></script>
     <script th:src="@{js/jquery.hoverIntent.min.js}" type="text/javascript"></script>
     <script th:src="@{js/jquery.waypoints.min.js}"></script>
