--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -7,7 +7,7 @@
     <title>Title</title>
 </head>
 <body>
-<div layout:fragment="pay">
+<div layout:fragment="content">
     <div class="wrap-container">
         <main class="main">
             <div class="page-header text-center" style="background-image: url('images/page-header-bg.jpg')">                <div class="container">
