--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -7,7 +7,7 @@
     <title>Title</title>
 </head>
 <body>
-<div layout:fragment="products">
+<div layout:fragment="content">
     <div class="wrap-container">
         <main class="main">
             <div class="page-header text-center" style="background-image: url('images/page-header-bg.jpg')">
@@ -690,29 +690,6 @@
                                                     </div><!-- End .custom-checkbox -->
                                                 </div><!-- End .filter-item -->
                                             </div><!-- End .filter-items -->
-                                        </div><!-- End .widget-body -->
-                                    </div><!-- End .collapse -->
-                                </div><!-- End .widget -->
-
-                                <div class="widget widget-collapsible">
-                                    <h3 class="widget-title">
-                                        <a data-toggle="collapse" href="#widget-3" role="button" aria-expanded="true" aria-controls="widget-3">
-                                            Colour
-                                        </a>
-                                    </h3><!-- End .widget-title -->
-
-                                    <div class="collapse show" id="widget-3">
-                                        <div class="widget-body">
-                                            <div class="filter-colors">
-                                                <a href="#" style="background: #b87145;"><span class="sr-only">Color Name</span></a>
-                                                <a href="#" style="background: #f0c04a;"><span class="sr-only">Color Name</span></a>
-                                                <a href="#" style="background: #333333;"><span class="sr-only">Color Name</span></a>
-                                                <a href="#" class="selected" style="background: #cc3333;"><span class="sr-only">Color Name</span></a>
-                                                <a href="#" style="background: #3399cc;"><span class="sr-only">Color Name</span></a>
-                                                <a href="#" style="background: #669933;"><span class="sr-only">Color Name</span></a>
-                                                <a href="#" style="background: #f2719c;"><span class="sr-only">Color Name</span></a>
-                                                <a href="#" style="background: #ebebeb;"><span class="sr-only">Color Name</span></a>
-                                            </div><!-- End .filter-colors -->
                                         </div><!-- End .widget-body -->
                                     </div><!-- End .collapse -->
                                 </div><!-- End .widget -->
